
/* Class = "UITextField"; accessibilityIdentifier = "nameField"; ObjectID = "2ro-lY-Lgc"; */
"2ro-lY-Lgc.accessibilityIdentifier" = "nameField";

/* Class = "UITextField"; accessibilityLabel = "Name"; ObjectID = "2ro-lY-Lgc"; */
"2ro-lY-Lgc.accessibilityLabel" = "Name";

/* Class = "UITextField"; placeholder = "Name"; ObjectID = "2ro-lY-Lgc"; */
"2ro-lY-Lgc.placeholder" = "Name";

/* Class = "UITextField"; accessibilityIdentifier = "percentField"; ObjectID = "KYw-C6-HDU"; */
"KYw-C6-HDU.accessibilityIdentifier" = "percentField";

/* Class = "UITextField"; accessibilityLabel = "Percent"; ObjectID = "KYw-C6-HDU"; */
"KYw-C6-HDU.accessibilityLabel" = "Percent";

/* Class = "UITextField"; placeholder = "Percentage"; ObjectID = "KYw-C6-HDU"; */
"KYw-C6-HDU.placeholder" = "Percentage";

/* Class = "UITextField"; accessibilityIdentifier = "hoursField"; ObjectID = "ZYw-qH-tIw"; */
"ZYw-qH-tIw.accessibilityIdentifier" = "hoursField";

/* Class = "UITextField"; accessibilityLabel = "Hours"; ObjectID = "ZYw-qH-tIw"; */
"ZYw-qH-tIw.accessibilityLabel" = "Hours";

/* Class = "UITextField"; placeholder = "Hours"; ObjectID = "ZYw-qH-tIw"; */
"ZYw-qH-tIw.placeholder" = "Hours";

/* Class = "UITextField"; accessibilityIdentifier = "amountField"; ObjectID = "xyf-xE-rf0"; */
"xyf-xE-rf0.accessibilityIdentifier" = "amountField";

/* Class = "UITextField"; accessibilityLabel = "Amount"; ObjectID = "xyf-xE-rf0"; */
"xyf-xE-rf0.accessibilityLabel" = "Amount";

/* Class = "UITextField"; placeholder = "Amount"; ObjectID = "xyf-xE-rf0"; */
"xyf-xE-rf0.placeholder" = "Amount";
