...
    }*/

    @IBAction func editWorker(atIndex index: Int) {
        let editWorkerVC = EditWorkerViewController(nibName: "EditWorkerViewController", bundle: nil)
        guard let bundle = Bundle(identifier: "com.apple.UIKit") else { fatalError("Coudn't access bundle") }
        
        let cancelButton = CancelButton(title: bundle.localizedString(forKey: "Cancel", value: "", table: nil), action: nil)
        cancelButton.accessibilityIdentifier = "cancelButton"
        cancelButton.accessibilityLabel = bundle.localizedString(forKey: "Cancel", value: "", table: nil)
        
        let addWorkerOnCompletionBlock = {
            
            let method: TipoutViewField = {
...
